test/deca/context/invalid/2_3_type_is_not_class.deca
// Description:
//   le type n'est pas defini
//
// Résultat :
// Ligne 10

class A {}

{
    AA a = null;
}
